# SimpleUGens

./: README.md  UGensCreation.scd
SimpleChaos/: CMakeLists.txt  SimpleChaos.cpp  SimpleChaos.sc
SimpleClip/: CMakeLists.txt  SimpleClip.cpp  SimpleClip.sc  copy.sh
SimpleDemand/: CMakeLists.txt  SimpleDemand.cpp  SimpleDemand.sc  copy.sh
SimpleDivider/: CMakeLists.txt  SimpleDivider.cpp  SimpleDivider.sc
SimpleEcho/: CMakeLists.txt  SimpleEcho.cpp  SimpleEcho.sc  copy.sh
SimpleLooper/: CMakeLists.txt  SimpleLooper.cpp  SimpleLooper.sc  copy.sh
SimpleNoise/: CMakeLists.txt  SimpleNoise.cpp  SimpleNoise.sc  copy.sh
SimpleOscillator/: CMakeLists.txt  SimpleOscillator.cpp  SimpleOscillator.sc  copy.sh
SimpleSpectral/: CMakeLists.txt  SimpleSpectral.cpp  SimpleSpectral.sc
SimpleTrigger/: CMakeCache.txt  SimpleTrigger.cpp  SimpleTrigger.sc  copy.sh
